# oxidegl

./: Cargo.toml  README.md
oxidegl/: Cargo.toml
oxidegl/src/: context.rs  conversions.rs  debug.rs  device_properties.rs  error.rs  framebuffer.rs  gl_enums.rs  gl_object.rs  lib.rs  pixel.rs  program.rs  render.rs  shader.rs  texture.rs  util.rs  vao.rs
oxidegl/src/commands/: buffer.rs  caps.rs  clear.rs  debug.rs  draw.rs  get.rs  misc.rs  programs.rs  shaders.rs  unimplemented.rs  vao.rs
oxidegl/src/context/: debug.rs  error.rs  gl_object.rs  mod.rs  pixel.rs  platform.rs  program.rs  state.rs  texture.rs  vao.rs
oxidegl/src/context/commands/: buffer.rs  caps.rs  clear.rs  debug.rs  draw.rs  get.rs  misc.rs  programs.rs  shaders.rs  unimplemented.rs  vao.rs
oxidegl/src/context/pixel/: internal_formats.rs
oxidegl/src/pixel/: internal_formats.rs
oxidegl_c/: Cargo.toml
oxidegl_c/src/: context.rs  gl_core.rs  lib.rs
oxidegl_shim/: Cargo.toml
oxidegl_shim/src/: lib.rs
tests/HelloTriangle/: hello_colorful_triangle.cpp
xtask/: implemented.txt
xtask/src/: codegen.rs  doc_parse.rs  tasks.rs
