[package]
name = "oxidegl_c"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
oxidegl = { path = "../oxidegl" }
objc2 = { workspace = true }
objc2-app-kit = { workspace = true, features = ["std"] }
log = { workspace = true }
likely_stable = { workspace = true }
