[package]
name = "oxidegl_shim"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
objc2 = { workspace = true }
objc2-app-kit = { workspace = true }
objc2-foundation = { workspace = true }
log = { workspace = true }
oxidegl_c = { path = "../oxidegl_c" }
oxidegl = { path = "../oxidegl" }
ctor = "0.4.1"
core-foundation-sys = "0.8.7"
libc = "0.2.158"
